# myquake2

./: CMakeLists.txt  README.md
.cache/clangd/index/: DG_dynarr.h.66D4D6C09FE5AB66.idx  HandmadeMath.h.B4832058E9606FB6.idx  anorms.h.E21FD6CA176711D5.idx  anormtab.h.5DA4531AA8F67201.idx  argproc.c.C2687D7444184729.idx  cl_cin.c.C7CD89C5684FE6CE.idx  cl_console.c.7295042EE07055DC.idx  cl_download.c.053E1F324F17AB6B.idx  cl_effects.c.435FF42083A90229.idx  cl_entities.c.294DFC866942BF4B.idx  cl_input.c.7DE4F94E851ABB17.idx  cl_inventory.c.2E06DBF41B11F010.idx  cl_keyboard.c.42177DBF57CB741F.idx  cl_lights.c.A18AA43ACB386894.idx  cl_main.c.80957723EF9D1254.idx  cl_network.c.59C90CC89C993B57.idx  cl_parse.c.FC982CAEF21B1CD6.idx  cl_particles.c.CC9EFD0B8A6C43C0.idx  cl_prediction.c.A7E4FCB857F7A227.idx  cl_screen.c.5BDE7573A2A4EF55.idx  cl_tempentities.c.F19B04EE0207CA6D.idx  cl_view.c.B4E11E86E5FEF5E9.idx  client.c.493B041E7F11222B.idx  client.h.0F0BB5D021E33B6B.idx  clientfields.h.009643756A7A4E12.idx  clientserver.c.6EEED2B8135A2362.idx  cmdparser.c.FE7E8227A147D673.idx  collision.c.87BD6801447814C8.idx  common.h.8C5D3395165247EC.idx  console.h.1F045EE6AC95C913.idx  crc.c.AD7C96643332D15C.idx  crc.h.27AE2435EB3BB453.idx  cvar.c.10E6E8C148BB211B.idx  download.c.CB5FAF1D3585540C.idx  download.h.3A067D45FFF1D1AF.idx  fields.h.31278C9E77E42B3F.idx  files.h.0FAF23E661E21CDF.idx  filesystem.c.5A50CE60A1B2B8DC.idx  flash.c.7439ED82B4E06E38.idx  frame.c.260E35321DA755AD.idx  (+119 more)
include/client/: client.h  keyboard.h
include/client/curl/: download.h  qcurl.h
include/client/input/: input.h
include/client/refresh/: ref_shared.h
include/client/vid/: ref.h  vid.h
include/game/: local.h
include/server/: server.h
src/: CMakeLists.txt
src/client/: CMakeLists.txt  MODULE_SRC  cl_cin.c  cl_console.c  cl_download.c  cl_effects.c  cl_entities.c  cl_input.c  cl_inventory.c  cl_keyboard.c  cl_lights.c  cl_main.c  cl_network.c  cl_parse.c  cl_particles.c  cl_prediction.c  cl_screen.c  cl_tempentities.c  cl_view.c
src/client/curl/: download.c  qcurl.c
src/client/input/: sdl.c
src/client/menu/: menu.c  qmenu.c  videomenu.c
src/client/refresh/: CMakeLists.txt
src/client/refresh/files/: pcx.c  pvs.c  stb.c  wal.c
src/client/refresh/gl1/: CMakeLists.txt  gl1_mesh.c  gl1_warp.c
src/client/refresh/gl1/header/: local.h
src/client/refresh/gl3/: CMakeLists.txt  MODULE_SRC  gl3_main.c  gl3_mesh.c
src/client/refresh/gl3/glad/src/: glad.c
src/client/refresh/gl3/header/: local.h
src/client/refresh/soft/: CMakeLists.txt  sw_alias.c
src/client/refresh/soft/header/: local.h
src/client/refresh/vk/: CMakeLists.txt  vk_mesh.c
src/client/refresh/vk/header/: local.h
src/client/sound/: ogg.c  openal.c  sdl.c  sound.c  wave.c
src/client/vid/: glimp_sdl.c  vid.c
src/common/: CMakeLists.txt  MODULE_SRC  argproc.c  clientserver.c  cmdparser.c  collision.c  crc.c  cvar.c  filesystem.c  frame.c  glob.c  movemsg.c  netchan.c  pmove.c  szone.c  zone.c
src/common/shared/: flash.c  shared.c
src/common/unzip/: ioapi.c  miniz.c  unzip.c
src/game/: CMakeLists.txt  MODULE_SRC  g_ai.c  g_chase.c  g_cmds.c  g_combat.c  g_func.c  g_items.c  g_main.c  g_misc.c  g_monster.c  g_phys.c  g_spawn.c  g_svcmds.c  g_target.c  g_trigger.c  g_turret.c  g_utils.c  g_weapon.c
src/game/monster/berserker/: berserker.c
src/game/monster/boss2/: boss2.c
src/game/monster/boss3/: boss3.c  boss31.c  boss32.c
src/game/monster/brain/: brain.c
src/game/monster/chick/: chick.c
src/game/monster/flipper/: flipper.c
src/game/monster/float/: float.c
src/game/monster/flyer/: flyer.c
src/game/monster/gladiator/: gladiator.c
src/game/monster/gunner/: gunner.c
src/game/monster/hover/: hover.c
src/game/monster/infantry/: infantry.c
src/game/monster/insane/: insane.c
src/game/monster/medic/: medic.c
src/game/monster/misc/: move.c
src/game/monster/mutant/: mutant.c
src/game/monster/parasite/: parasite.c
src/game/monster/soldier/: soldier.c
src/game/monster/supertank/: supertank.c
src/game/monster/tank/: tank.c
src/game/player/: client.c  hud.c  trail.c  view.c  weapon.c
src/game/savegame/: savegame.c
src/platform/: CMakeLists.txt
src/platform/generic/: misc.c
src/platform/unix/: CMakeLists.txt  MODULE_SRC  main.c  network.c  signalhandler.c  system.c
src/platform/unix/real_main/: CMakeLists.txt  main.c
src/platform/unix/shared/: hunk.c
src/server/: CMakeLists.txt  sv_cmd.c  sv_conless.c  sv_entities.c  sv_game.c  sv_init.c  sv_main.c  sv_save.c  sv_send.c  sv_user.c  sv_world.c
